layout部分基础搭建

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/bendjen.ico">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_526033_gluf6ti92bne9udi.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,7 +22,7 @@
     -->
     <title>Bendjen</title>
   </head>
-  <body>
+  <body style='background-color:#F9F9F9'>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
