--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script src='./lib/react.production.min.js'></script>
+    <script src='./lib/react-dom.production.min.js'></script> -->
+    <script src='./lib/react.development.js'></script>
+    <script src='./lib/react-dom.development.js'></script>
   </body>
 </html>
