--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     -->
     <!-- <script src='./lib/react.production.min.js'></script>
     <script src='./lib/react-dom.production.min.js'></script> -->
-    <script src='./lib/react.development.js'></script>
-    <script src='./lib/react-dom.development.js'></script>
+    <!-- <script src='./lib/react.development.js'></script>
+    <script src='./lib/react-dom.development.js'></script> -->
   </body>
 </html>
