--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/bendjen.ico">
-    <link rel="stylesheet" href="%PUBLIC_URL%/lib/iconfont.css">
+    <!-- <link rel="manifest" href="manifest.json"> -->
+    <link rel="shortcut icon" href="bendjen.ico">
+    <link rel="stylesheet" href="lib/iconfont.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -39,7 +39,7 @@
     -->
     <!-- <script src='./lib/react.production.min.js'></script>
     <script src='./lib/react-dom.production.min.js'></script> -->
-    <script src='%PUBLIC_URL%/lib/react.development.js'></script>
-    <script src='%PUBLIC_URL%/lib/react-dom.development.js'></script>
+    <script src='lib/react.development.js'></script>
+    <script src='lib/react-dom.development.js'></script>
   </body>
 </html>
