--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <div id="root"></div>
     <script src='lib/react.production.min.js'></script>
     <script src='lib/react-dom.production.min.js'></script>
+    <!-- <script src='lib/tracking-min.js'></script> -->
     <!-- <script src='lib/react.development.js'></script>
     <script src='lib/react-dom.development.js'></script> -->
   </body>
